; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/compat/extr_compat_ifaddrs.c_addToEnd.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/compat/extr_compat_ifaddrs.c_addToEnd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifaddrs = type { %struct.ifaddrs* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifaddrs**, %struct.ifaddrs*)* @addToEnd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @addToEnd(%struct.ifaddrs** %0, %struct.ifaddrs* %1) #0 {
  %3 = alloca %struct.ifaddrs**, align 8
  %4 = alloca %struct.ifaddrs*, align 8
  %5 = alloca %struct.ifaddrs*, align 8
  store %struct.ifaddrs** %0, %struct.ifaddrs*** %3, align 8
  store %struct.ifaddrs* %1, %struct.ifaddrs** %4, align 8
  %6 = load %struct.ifaddrs**, %struct.ifaddrs*** %3, align 8
  %7 = load %struct.ifaddrs*, %struct.ifaddrs** %6, align 8
  %8 = icmp ne %struct.ifaddrs* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load %struct.ifaddrs*, %struct.ifaddrs** %4, align 8
  %11 = load %struct.ifaddrs**, %struct.ifaddrs*** %3, align 8
  store %struct.ifaddrs* %10, %struct.ifaddrs** %11, align 8
  br label %28

12:                                               ; preds = %2
  %13 = load %struct.ifaddrs**, %struct.ifaddrs*** %3, align 8
  %14 = load %struct.ifaddrs*, %struct.ifaddrs** %13, align 8
  store %struct.ifaddrs* %14, %struct.ifaddrs** %5, align 8
  br label %15

15:                                               ; preds = %20, %12
  %16 = load %struct.ifaddrs*, %struct.ifaddrs** %5, align 8
  %17 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %16, i32 0, i32 0
  %18 = load %struct.ifaddrs*, %struct.ifaddrs** %17, align 8
  %19 = icmp ne %struct.ifaddrs* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %15
  %21 = load %struct.ifaddrs*, %struct.ifaddrs** %5, align 8
  %22 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %21, i32 0, i32 0
  %23 = load %struct.ifaddrs*, %struct.ifaddrs** %22, align 8
  store %struct.ifaddrs* %23, %struct.ifaddrs** %5, align 8
  br label %15

24:                                               ; preds = %15
  %25 = load %struct.ifaddrs*, %struct.ifaddrs** %4, align 8
  %26 = load %struct.ifaddrs*, %struct.ifaddrs** %5, align 8
  %27 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %26, i32 0, i32 0
  store %struct.ifaddrs* %25, %struct.ifaddrs** %27, align 8
  br label %28

28:                                               ; preds = %24, %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
